--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0"
   }
 }
