--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0"
